fix: Editor and Sketch layout issues. (#7575)

--- a/packages/apps/plugins/plugin-sketch/src/components/Sketch/theme.css
+++ b/packages/apps/plugins/plugin-sketch/src/components/Sketch/theme.css
@@ -1,24 +1,24 @@
 /**
  * Override.
- * TODO(burdon): Generate from our theme.
+ * TODO(burdon): Generate from our theme?
  */
 
 :root {
   .tl-theme__dark {
-    --color-background: #252529;
+    --color-background: transparent;
 
     .tlui-toolbar__tools, .tlui-menu, .tlui-style-panel__wrapper {
       box-shadow: none;
-      border: 1px solid #444444;
+      border: 1px solid #464646;
     }
   }
 
   .tl-theme__light {
-    --color-background: #ffffff;
+    --color-background: transparent;
 
     .tlui-toolbar__tools, .tlui-menu, .tlui-style-panel__wrapper {
       box-shadow: none;
-      border: 1px solid #cccccc;
+      border: 1px solid #f0f0f3;
     }
   }
 }
